<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_potatohead"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cait.lagrand_pset1.potatohead">


    <!--Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="36sp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" /></RelativeLayout>

    <!--Images-->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Body image -->
        <ImageView
            android:contentDescription="@string/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/body"
            android:id="@+id/bodyImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <!-- Hat image -->
        <ImageView
            android:contentDescription="@string/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hat"
            android:id="@+id/hatImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Eyes image -->
        <ImageView
            android:contentDescription="@string/eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/eyes"
            android:id="@+id/eyesImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Ears image -->
        <ImageView
            android:contentDescription="@string/ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ears"
            android:id="@+id/earsImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Nose image -->
        <ImageView
            android:contentDescription="@string/nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/nose"
            android:id="@+id/noseImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Mouth image -->
        <ImageView
            android:contentDescription="@string/mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mouth"
            android:id="@+id/mouthImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Glasses image -->
        <ImageView
            android:contentDescription="@string/glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/glasses"
            android:id="@+id/glassesImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Eyebrows image -->
        <ImageView
            android:contentDescription="@string/eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/eyebrows"
            android:id="@+id/eyebrowsImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Mustache image -->
        <ImageView
            android:contentDescription="@string/mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mustache"
            android:id="@+id/mustacheImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Arms image -->
        <ImageView
            android:contentDescription="@string/arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arms"
            android:id="@+id/armsImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <!-- Shoes image -->
        <ImageView
            android:contentDescription="@string/shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/shoes"
            android:id="@+id/shoesImage"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>
    </RelativeLayout>


    <!-- Checkboxes text-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxtext"
            android:textSize="16sp"
            android:gravity="center"/>
    </RelativeLayout>

    <!--Checkboxes-->
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:context=".GridXMLActivity" >

        <CheckBox
            android:text="@string/hat"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="showImage"
            android:id="@+id/hatbox" />

        <CheckBox
            android:text="@string/eyes"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="showImage"
            android:id="@+id/eyesbox"/>

        <CheckBox
            android:text="@string/ears"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="showImage"
            android:id="@+id/earsbox" />

        <CheckBox
            android:text="@string/nose"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_row="3"
            android:onClick="showImage"
            android:id="@+id/nosebox"/>

        <CheckBox
            android:text="@string/mouth"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_row="4"
            android:onClick="showImage"
            android:id="@+id/mouthbox" />

        <Space
            android:layout_row="1"
            android:layout_rowSpan="4"
            android:layout_gravity="fill" />

        <CheckBox
            android:text="@string/glasses"
            android:textSize="12sp"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="showImage"
            android:id="@+id/glassesbox"/>

        <CheckBox
            android:text="@string/eyebrows"
            android:textSize="12sp"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="showImage"
            android:id="@+id/eyebrowsbox"/>

        <CheckBox
            android:text="@string/mustache"
            android:textSize="12sp"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="showImage"
            android:id="@+id/mustachebox"/>

        <CheckBox
            android:text="@string/arms"
            android:textSize="12sp"
            android:layout_column="2"
            android:layout_row="3"
            android:onClick="showImage"
            android:id="@+id/armsbox"/>

        <CheckBox
            android:text="@string/shoes"
            android:textSize="12sp"
            android:layout_column="2"
            android:layout_row="4"
            android:onClick="showImage"
            android:id="@+id/shoesbox"/>
    </GridLayout>
</LinearLayout>
